[package]
name = "unsb3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zip = { version = "0.5.13", default-features = false, features = ["deflate", "bzip2"]}
smol_str = "0.1.23"
